prepare for 0.54.0