@@ -182,7 +182,7 @@
             <dependency>
                 <groupId>org.aspectj</groupId>
                 <artifactId>aspectjrt</artifactId>
-                <version>1.8.9</version>
+                <version>1.9.7</version>
             </dependency>
 
             <dependency>
@@ -221,12 +221,6 @@
             </dependency>
 
             <dependency>
-                <groupId>org.codehaus.jackson</groupId>
-                <artifactId>jackson-mapper-asl</artifactId>
-                <version>1.9.13</version>
-            </dependency>
-
-            <dependency>
                 <groupId>org.xerial.snappy</groupId>
                 <artifactId>snappy-java</artifactId>
                 <version>1.1.10.7</version>
@@ -253,7 +247,7 @@
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
-                <version>1.10.8</version>
+                <version>4.11.0</version>
                 <!-- mockito's dependency on hamcrest conflict to junit 4.11, exclude
                     that. -->
                 <exclusions>
@@ -333,6 +327,18 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.arrow</groupId>
+                <artifactId>arrow-format</artifactId>
+                <version>17.0.0</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.arrow</groupId>
+                <artifactId>arrow-memory-core</artifactId>
+                <version>17.0.0</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.arrow</groupId>
                 <artifactId>arrow-memory-netty</artifactId>
                 <version>17.0.0</version>
             </dependency>
@@ -384,16 +390,118 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <javadoc.opts>-Xdoclint:none</javadoc.opts>
     </properties>
     <profiles>
         <profile>
-            <id>doclint-java8-disable</id>
+            <id>jdk8</id>
             <activation>
-                <jdk>[1.8,)</jdk>
+                <activeByDefault>true</activeByDefault>
             </activation>
-            <properties>
-                <javadoc.opts>-Xdoclint:none</javadoc.opts>
-            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.1</version>
+                        <configuration>
+                            <source>1.8</source>
+                            <target>1.8</target>
+                            <encoding>UTF-8</encoding>
+                            <optimize>true</optimize>
+                            <debug>true</debug>
+                            <showDeprecation>true</showDeprecation>
+                            <showWarnings>true</showWarnings>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.22.2</version>
+                        <configuration>
+                            <parallel>classes</parallel>
+                            <threadCountClasses>20</threadCountClasses>
+                            <forkCount>3</forkCount>
+                            <useUnlimitedThreads>true</useUnlimitedThreads>
+                            <reuseForks>false</reuseForks>
+                        </configuration>
+                    </plugin>
+                </plugins>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-javadoc-plugin</artifactId>
+                            <version>2.10.4</version>
+                            <configuration>
+                                <failOnError>false</failOnError>
+                                <charset>UTF-8</charset>
+                                <docencoding>UTF-8</docencoding>
+                                <author>false</author>
+                                <show>public</show>
+                                <additionalparam>${javadoc.opts}</additionalparam>
+                            </configuration>
+                            <executions>
+                                <execution>
+                                    <id>attach-javadocs</id>
+                                    <goals>
+                                        <goal>jar</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
+
+        <profile>
+            <id>jdk21</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.13.0</version>
+                        <configuration>
+                            <source>21</source>
+                            <target>21</target>
+                            <encoding>UTF-8</encoding>
+                            <optimize>true</optimize>
+                            <debug>true</debug>
+                            <showDeprecation>true</showDeprecation>
+                            <showWarnings>true</showWarnings>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.2.5</version>
+                        <configuration>
+                            <useFile>true</useFile>
+                            <parallel>classes</parallel>
+                            <threadCountClasses>20</threadCountClasses>
+                            <forkCount>3</forkCount>
+                            <useUnlimitedThreads>true</useUnlimitedThreads>
+                            <reuseForks>false</reuseForks>
+                            <argLine>--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED --add-opens=java.base/java.nio.charset=ALL-UNNAMED</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-javadoc-plugin</artifactId>
+                            <version>3.11.2</version>
+                            <configuration>
+                                <failOnError>false</failOnError>
+                                <encoding>UTF-8</encoding>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
         </profile>
     </profiles>
 
@@ -402,14 +510,8 @@
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.10.4</version>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
-                    <version>3.2.1</version>
+                    <version>3.5.1</version>
                     <configuration>
                         <artifactSet>
                             <includes>
@@ -428,7 +530,8 @@
                         <relocations>
                             <relocation>
                                 <pattern>com.google.protobuf</pattern>
-                                <shadedPattern>com.aliyun.odps.thirdparty.com.google.protobuf</shadedPattern>
+                                <shadedPattern>com.aliyun.odps.thirdparty.com.google.protobuf
+                                </shadedPattern>
                             </relocation>
                             <relocation>
                                 <pattern>com.google.guava</pattern>
@@ -450,6 +553,11 @@
                         </relocations>
                         <shadedClassifierName>shaded</shadedClassifierName>
                         <shadedArtifactAttached>true</shadedArtifactAttached>
+                        <!-- This parameter createDependencyReducedPom is not recommended by the community.
+                        However, if this parameter is not configured, these shaded jars will not be included in the user application
+                        when the user does not specify the use of shaded dependencies. This will cause problems, and users need to
+                        manually rely on dependencies such as protobuf.-->
+                        <createDependencyReducedPom>false</createDependencyReducedPom>
                     </configuration>
                     <executions>
                         <execution>
@@ -465,6 +573,44 @@
 
         <plugins>
             <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <inherited>false</inherited>
+                <version>3.1.0</version>
+                <configuration>
+                    <target>
+                        <junitreport todir="target/surefire-reports">
+                            <fileset dir="target/surefire-reports">
+                                <include name="**/*.xml"/>
+                            </fileset>
+                            <report format="noframes" todir="target/junit-report"/>
+                        </junitreport>
+                    </target>
+                </configuration>
+                <goals>
+                    <goal>run</goal>
+                </goals>
+                <dependencies>
+                    <dependency>
+                        <groupId>ant</groupId>
+                        <artifactId>ant-junit</artifactId>
+                        <version>1.6.2</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
@@ -479,20 +625,6 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
-                    <optimize>true</optimize>
-                    <debug>true</debug>
-                    <showDeprecation>true</showDeprecation>
-                    <showWarnings>true</showWarnings>
-                </configuration>
-            </plugin>
 
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
@@ -522,19 +654,6 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>3.0.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar-no-fork</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -554,47 +673,8 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <configuration>
-                    <charset>UTF-8</charset>
-                    <docencoding>UTF-8</docencoding>
-                    <author>false</author>
-                    <show>public</show>
-                    <additionalparam>${javadoc.opts}</additionalparam>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
-
-            <plugin>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <inherited>false</inherited>
-                <configuration>
-                    <tasks>
-                        <junitreport todir="target/surefire-reports">
-                            <fileset dir="target/surefire-reports">
-                                <include name="**/*.xml"/>
-                            </fileset>
-                            <report format="noframes" todir="target/junit-report"/>
-                        </junitreport>
-                    </tasks>
-                </configuration>
-                <goals>
-                    <goal>run</goal>
-                </goals>
-                <dependencies>
-                    <dependency>
-                        <groupId>ant</groupId>
-                        <artifactId>ant-junit</artifactId>
-                        <version>1.6.2</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
+        
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
@@ -619,16 +699,9 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
-                <configuration>
-                    <parallel>classes</parallel>
-                    <threadCountClasses>20</threadCountClasses>
-                    <forkCount>3</forkCount>
-                    <useUnlimitedThreads>true</useUnlimitedThreads>
-                    <reuseForks>false</reuseForks>
-                </configuration>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-site-plugin</artifactId>
+              <version>3.7.1</version>
             </plugin>
 
         </plugins>
